# physics-engine

./: .gitignore  CMakeLists.txt  README.md
include/: camera.h  constants.h  controller.h  graphics_manager.h  simulation.h
include/bodies/: body.h  body_manager.h
include/glad/: glad.c  glad.h
include/graphics/: camera.h  graphics_manager.h  renderer.h  shader.h
include/graphics/renderers/: box_renderer.h  cube_renderer.h
include/objects/: body.h  box.h  cube.h
include/physics/: types.h
include/physics/components/: collision_component.h  component.h  gravity_component.h
meshes/: box.txt
scripts/: generate_circle.py
shaders/: fragment.glsl  vertex.glsl
src/: camera.cc  controller.cc  graphics_manager.cc  graphics_manager.cpp  main.cc  main.cpp  simulation.cc  simulation.cpp
src/bodies/: body.cc  body_manager.cc
src/graphics/: camera.cc  graphics_manager.cc  renderer.cc  shader.cc
src/graphics/renderers/: box_renderer.cc  cube_renderer.cc
src/objects/: box.cc  cube.cc
src/physics/components/: gravity_component.cc
